--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <!-- 标题区域 -->
         <div class="header">
             <h1>股票价差监控系统</h1>
-            <div class="update-time">最后更新时间: <span id="updateTime">--:--:--</span></div>
+            <div class="update-time">本地时间: <span id="updateTime">--:--:--</span></div>
             <!-- 添加登出按钮 -->
             <button id="logoutButton" class="logout-btn">登出</button>
         </div>
